fixed mobile spacing

--- a/_sass/custom-minimalist.scss
+++ b/_sass/custom-minimalist.scss
@@ -11,7 +11,9 @@ pre {
   font-size: 14px;
 }
 
-.theme-switch {
+.theme-switch { 
+  display: inline-flex;
+  align-items: center; 
   background-color: transparent;
   border: none; /* Remove borders */
   color: var(--clr-text);
@@ -23,5 +25,6 @@ pre {
 .link-wrapper-mobile {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   color: black;
 }
